--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "laravel/framework": ">=6.0"
+        "laravel/framework": ">=6.0",
+        "byancode/settings": ">=1.0.2"
     },
     "require-dev": {},
     "autoload": {
